correct spelling error

--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="index.css">
-    <title>Web Dev III Capston Part 3 Demo</title>
+    <title>Web Dev III Capstone Part 3 Demo</title>
 </head>
 <body class="bg-black/80 text-white">
-    <div id="quize-app" class="max-w-[600px] w-full">
+    <div id="quiz-app" class="max-w-[600px] w-full">
         <div id="home-page" class="w-screen h-screen flex flex-col justify-center items-center">
             <h1 class="mb-10">This is the Home Page</h1>
             <button id="start-btn" class="bg-sky-500 px-4 py-2 rounded-lg">Take a Quiz</button>
